Fixed wrapping issue on mobile

--- a/app/static/CSS/mobile.css
+++ b/app/static/CSS/mobile.css
@@ -36,6 +36,7 @@ body {
 .view {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 #nav {
